# formatorbit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DesignSpec.md  FEATURE_IDEAS.md  LICENSE  PLUGINS.md  README.md
.claude/plans/: glimmering-snacking-bee.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
Formula/: forb.rb
bundled-plugins/: checksums.py  custom_decoder.py
crates/cli/: Cargo.toml
crates/cli/src/: analytics.rs  config.rs  graph.rs  main.rs  pipe.rs  pretty.rs  tokenizer.rs  updates.rs
crates/cli/tests/: readme_examples.rs
crates/core/: Cargo.toml
crates/core/benches/: benchmarks.rs
crates/core/bundled-plugins/: crypto.py  dev_traits.py  math_ext.py
crates/core/src/: convert.rs  expr_context.rs  format.rs  lib.rs  types.rs
crates/core/src/formats/: archive.rs  audio.rs  base64.rs  binary.rs  char.rs  cidr.rs  color.rs  constants.rs  coords.rs  cron.rs  cuid.rs  currency.rs  currency_expr.rs  currency_rates.rs  datasize.rs  datetime.rs  digest.rs  duration.rs  epoch.rs  escape.rs  expr.rs  font.rs  graph.rs  hash.rs  hex.rs  hexdump.rs  image.rs  integers.rs  ipaddr.rs  isbn.rs  json.rs  jwt.rs  mac_address.rs  mac_oui_data.rs  mod.rs  msgpack.rs  nanoid.rs  natural_date.rs  octal.rs  office.rs  (+11 more)
crates/core/src/formats/units/: angle.rs  area.rs  energy.rs  length.rs  mod.rs  pressure.rs  speed.rs  volume.rs  weight.rs
crates/core/src/plugin/: bundled.rs  discovery.rs  mod.rs  python_discovery.rs  python_loader.rs
crates/core/src/plugin/python/: currency.rs  decoder.rs  expr.rs  mod.rs  trait_plugin.rs  types.rs  visualizer.rs
crates/core/tests/: golden_corpus.rs  snapshots.rs
crates/core/tests/snapshots/: snapshots__base64_interpretation.snap  snapshots__binary_interpretation.snap  snapshots__color_hex_conversions.snap  snapshots__color_hex_interpretation.snap  snapshots__color_rgb_interpretation.snap  snapshots__currency_interpretation.snap  snapshots__datasize_conversions.snap  snapshots__datasize_interpretation.snap  snapshots__datetime_rfc3339_conversions.snap  snapshots__datetime_rfc3339_interpretation.snap  snapshots__duration_conversions.snap  snapshots__duration_interpretation.snap  snapshots__expression_conversions.snap  snapshots__expression_interpretation.snap  snapshots__hex_bytes_interpretation.snap  snapshots__hex_conversion_count.snap  snapshots__hex_to_utf8_conversion.snap  snapshots__hex_with_prefix_interpretation.snap  snapshots__ipv4_loopback_interpretation.snap  snapshots__ipv4_private_interpretation.snap  snapshots__ipv4_public_interpretation.snap  snapshots__ipv6_loopback_interpretation.snap  snapshots__json_object_interpretation.snap  snapshots__length_meters_conversions.snap  snapshots__length_meters_interpretation.snap  snapshots__number_conversion_count.snap  snapshots__octal_interpretation.snap  snapshots__sha256_interpretation.snap  snapshots__short_text_conversion_count.snap  snapshots__temperature_celsius_conversions.snap  snapshots__temperature_celsius_interpretation.snap  snapshots__text_conversion_count.snap  snapshots__uuid_interpretation.snap
crates/ffi/: Cargo.toml
crates/ffi/include/: formatorbit.h
crates/ffi/src/: lib.rs  types.rs
crates/plugin-api/: Cargo.toml
crates/plugin-api/src/: lib.rs
docs/: FORMAT_IDEAS.md  PROGRESS.md
sample-plugins/: crypto_rates.py.sample  custom_decoder.py.sample  dev_traits.py.sample  math_ext.py.sample
