[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/plugin-api",
    "crates/ffi",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["David"]

[workspace.dependencies]
formatorbit-core = { path = "crates/core" }
formatorbit-plugin-api = { path = "crates/plugin-api" }
formatorbit-ffi = { path = "crates/ffi" }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
libloading = "0.8"
clap = { version = "4", features = ["derive"] }
colored = "2"
pretty_assertions = "1"
