[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/ffi",
    "crates/cli",
]

[workspace.package]
version = "0.5.1"
edition = "2021"
license = "MIT"
authors = ["David Everlof"]
repository = "https://github.com/mjukis-ab/formatorbit"
homepage = "https://github.com/mjukis-ab/formatorbit"
readme = "README.md"

[workspace.metadata.dist]
cargo-dist-version = "0.27.0"
ci = "github"
installers = ["shell", "powershell", "homebrew"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
tap = "mjukis-ab/formatorbit"
publish-jobs = ["homebrew"]

[workspace.dependencies]
formatorbit-core = { version = "0.5.1", path = "crates/core" }
formatorbit-ffi = { path = "crates/ffi" }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
libloading = "0.8"
clap = { version = "4", features = ["derive"] }
colored = "2"
pretty_assertions = "1"
