[package]
name = "formatorbit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CLI tool that shows all possible interpretations of any data input"
keywords = ["converter", "hex", "base64", "cli", "encoding"]
categories = ["command-line-utilities", "encoding"]

[[bin]]
name = "forb"
path = "src/main.rs"

[dependencies]
formatorbit-core = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
is-terminal = "0.4"
unicode-width = "0.2"
