[package]
name = "formatorbit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CLI tool that shows all possible interpretations of any data input"
keywords = ["converter", "hex", "base64", "cli", "encoding"]
categories = ["command-line-utilities", "encoding"]

[[bin]]
name = "forb"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/forb-v{ version }-{ target }.{ archive-format }"
bin-dir = "forb{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.deb]
maintainer = "David Everlof"
section = "utils"
priority = "optional"
assets = [
    ["target/release/forb", "usr/bin/", "755"],
]
extended-description = "A CLI tool that automatically detects and converts data between formats. Paste hex, base64, timestamps, UUIDs, IPs, colors, and more - forb shows all possible interpretations."

[dependencies]
formatorbit-core = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
ureq = "2"
is-terminal = "0.4"
unicode-width = "0.2"
