[package]
name = "formatorbit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "CLI tool that shows all possible interpretations of any data input"
keywords = ["cli", "devtools", "hex", "base64", "decoder"]
categories = ["command-line-utilities", "encoding"]

[[bin]]
name = "forb"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/forb-v{ version }-{ target }.{ archive-format }"
bin-dir = "forb{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.deb]
maintainer = "David Everlof"
section = "utils"
priority = "optional"
assets = [
    ["target/release/forb", "usr/bin/", "755"],
]
extended-description = "A CLI tool that automatically detects and converts data between formats. Paste hex, base64, timestamps, UUIDs, IPs, colors, and more - forb shows all possible interpretations."

[dependencies]
formatorbit-core = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = "2"
is-terminal = "0.4"
unicode-width = "0.2"
dirs = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
