[package]
name = "formatorbit-core"
version.workspace = true
edition.workspace = true

[features]
default = []
python = ["pyo3"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
libloading = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
rmp-serde = "1"
percent-encoding = "2"

[dependencies.pyo3]
version = "0.23"
optional = true

[dev-dependencies]
pretty_assertions = { workspace = true }
