[package]
name = "formatorbit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core library for data format detection and conversion"
keywords = ["converter", "hex", "base64", "encoding", "parser"]
categories = ["encoding", "parsing"]

[features]
default = []
python = ["pyo3"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
libloading = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
rmp-serde = "1"
# Coordinate systems
geohash = "0.13"
pluscodes = "0.5"
geoconvert = "1"
percent-encoding = "2"
plist = "1"
evalexpr = "13"
ureq = { version = "2", features = ["json"] }
dirs = "5"
tracing = { workspace = true }
unicode-segmentation = "1"
regex = "1"
# Image parsing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff", "ico"] }
kamadak-exif = "0.5"
# Hash digests
crc32fast = "1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
blake2 = "0.10"
blake3 = "1"

[dependencies.pyo3]
version = "0.23"
optional = true

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { version = "1", features = ["json", "redactions"] }
