[package]
name = "formatorbit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Core library for data format detection and conversion"
keywords = ["format-detection", "data-conversion", "hex", "base64", "decoder"]
categories = ["encoding", "parsing"]

[features]
default = []
python = ["pyo3"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
libloading = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
rmp-serde = "1"
# Coordinate systems
geohash = "0.13"
pluscodes = "0.5"
geoconvert = "1"
percent-encoding = "2"
url = "2"
plist = "1"
evalexpr = "13"
ureq = { version = "2", features = ["json"] }
dirs = "5"
tracing = { workspace = true }
unicode-segmentation = "1"
regex = "1"
# Image parsing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff", "ico"] }
kamadak-exif = "0.5"
# Binary format metadata
lopdf = "0.34"
ttf-parser = "0.24"
zip = "2"
tar = "0.4"
flate2 = "1"
quick-xml = "0.37"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "isomp4", "aac"] }
matroska = "0.30"

[dependencies.pyo3]
version = "0.23"
optional = true
features = ["abi3-py39"]

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { version = "1", features = ["json", "redactions"] }
tempfile = "3"
serial_test = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
